--- a/wiki/FacebookConnect.wiki
+++ b/wiki/FacebookConnect.wiki
@@ -34,6 +34,32 @@ Create a new 'facebook_id' INTEGER profile field.
 
 === PHP control code ===
 
+Put this at the very begining of your _main layout_:
+
+{{{
+<?php
+$fbconfig = Yum::module()->facebookConfig;
+if ($fbconfig) {
+    Yii::import('application.modules.user.vendors.facebook.*');
+	require_once('Facebook.php');
+    $facebook = new Facebook($fbconfig);
+    $fb_session = $facebook->getSession();
+    if($fb_session)
+	{
+		if(Yii::app()->user->isGuest)
+		{
+			if($this->createUrl($this->action->id) != '/user/auth/login')
+			{
+				$this->redirect($this->createUrl('/user/auth/login'));
+			}
+		}
+	}
+}
+?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
+}}}
+
 === Facebook Javascript code ===
 
 === The (infamous) Facebook Login button ===
