Edited wiki page FacebookConnect through web user interface.

--- a/wiki/FacebookConnect.wiki
+++ b/wiki/FacebookConnect.wiki
@@ -62,6 +62,47 @@ if ($fbconfig) {
 
 === Facebook Javascript code ===
 
+Put this just after the `<body>` tag of your _main layout_:
+
+{{{
+<?php if ($fbconfig): ?>
+<div id="fb-root"></div>
+<script>
+window.fbAsyncInit = function() {
+    FB.init({
+        appId   : '<?php echo $facebook->getAppId(); ?>',
+        session : <?php echo json_encode($fb_session); ?>, // don't refetch the session when PHP already has it
+        status  : <?php echo $fbconfig['status']; ?>, // check login status
+        cookie  : <?php echo $fbconfig['cookie']; ?>, // enable cookies to allow the server to access the session
+        xfbml   : <?php echo $fbconfig['xfbml']; ?> // parse XFBML
+    });
+
+    // whenever the user logs in, we refresh the page
+    FB.Event.subscribe('auth.login', function() {
+        window.location.reload();
+    });
+};
+
+(function() {
+    var e = document.createElement('script');
+    e.src = document.location.protocol + '//connect.facebook.net/<?php echo $fbconfig['lang']; ?>/all.js';
+    e.async = true;
+    document.getElementById('fb-root').appendChild(e);
+}());
+</script>
+<?php endif; ?>
+}}}
 === The (infamous) Facebook Login button ===
 
+In your views, where you want the button to be displayed. Check for the Facebook Connect permissions in [http://developers.facebook.com/]
+
+{{{
+<?php if (!Yii::app()->user->isGuest): ?>
+<a href="<?php echo $this->createUrl('/user/auth/logout'); ?>" class="exit"><div></div>
+   <span>Salir</span>
+</a>
+<?php else: ?>
+<fb:login-button perms="email,user_birthday,read_stream,publish_stream"></fb:login-button>
+<?php endif; ?>
+}}}
 ==== Alternative login method ====
