--- a/wiki/FacebookConnect.wiki
+++ b/wiki/FacebookConnect.wiki
@@ -66,7 +66,7 @@ Put this at the very beginning of your _main layout_:
 <?php
 
 $fbconfig = Yum::module()->facebookConfig;
-if isset(($fbconfig)) {
+if(isset($fbconfig)) {
     Yii::import('application.modules.user.vendors.facebook.*');
         require_once('Facebook.php');
     $facebook = new Facebook($fbconfig);
