--- a/wiki/InstallationInstructions.wiki
+++ b/wiki/InstallationInstructions.wiki
@@ -81,10 +81,8 @@ Alternatively, you can download the latest sources from SVN repository:
 
 {{{
 $ cd testdrive/protected
-$ mkdir modules
-$ cd modules
-$ svn checkout http://yii-user-management.googlecode.com/svn/trunk/ yii-user-management-read-only
-$ find . -type d -name '.SVN' -exec rm {} \; //Deletes all .SVN directories 
+$ svn checkout http://yii-user-management.googlecode.com/svn/trunk/ yii-user-management-read-only modules
+$ find modules/ -type d -name '.SVN' -exec rm {} \; //Deletes all .SVN directories 
 }}}
 
 == Configure YUM to run the wizard ==
