--- a/wiki/InstallationInstructions.wiki
+++ b/wiki/InstallationInstructions.wiki
@@ -81,7 +81,7 @@ Alternatively, you can download the latest sources from SVN repository:
 
 {{{
 $ cd testdrive/protected
-$ svn checkout http://yii-user-management.googlecode.com/svn/trunk/ yii-user-management-read-only modules
+$ svn checkout http://yii-user-management.googlecode.com/svn/trunk/  modules
 $ find modules/ -type d -iname '.svn' -exec rm {} \; //Deletes all .SVN directories 
 }}}
 
