Edited wiki page CreateYourOwnRegistrationProccess through web user interface.

--- a/wiki/CreateYourOwnRegistrationProccess.wiki
+++ b/wiki/CreateYourOwnRegistrationProccess.wiki
@@ -75,10 +75,10 @@ We change the `registration.php` file to look something like this:
 
 <div class="form">
 <?php $activeform = $this->beginWidget('CActiveForm', array(
-			'id'=>'registration-form',
-			'enableAjaxValidation'=>false,
-			'focus'=>array($profile,'email'),
-			));
+	'id'=>'registration-form',
+	'enableAjaxValidation'=>false,
+	'focus'=>array($profile,'email'),
+	));
 ?>
 
 <?php echo Yum::requiredFieldNote(); ?>
@@ -106,57 +106,53 @@ echo $activeform->textArea($profile,'about');
 Override the `actionRegistration()` of your Controller like this:
 
 {{{
- 	public function actionRegistration() {
-		Yii::import('application.modules.profile.models.*');
-		$profile = new YumProfile;
+public function actionRegistration() {
+	Yii::import('application.modules.profile.models.*');
+	$profile = new YumProfile;
 
-		if (isset($_POST['Profile'])) { 
-			$profile->attributes = $_POST['YumProfile'];
+	if (isset($_POST['Profile'])) { 
+		$profile->attributes = $_POST['YumProfile'];
 
-			if($profile->save())
-				$user = new YumUser;
-				$password = YumUser::generatePassword();
-				$user->register(md5($profile->email), $password, $profile);
+		if($profile->save())
+			$user = new YumUser;
+			$password = YumUser::generatePassword();
+			$user->register(md5($profile->email), $password, $profile);
 
-				$this->sendRegistrationEmail($user, $password);
-				Yum::setFlash('Thank you for your registration. Please check your email.');
-				$this->redirect(Yum::module()->loginUrl);
-			}
+			$this->sendRegistrationEmail($user, $password);
+			Yum::setFlash('Thank you for your registration. Please check your email.');
+			$this->redirect(Yum::module()->loginUrl);
+		}
 
-		$this->render('registration', array(
-					'profile' => $profile,
-					)
-				);  
-	}
+	$this->render('registration', array('profile' => $profile));  
+}
 
 }}}
 
 Now, we also need to override the `sendRegistrationEmail()` method, because we want to include the clear-text password in the email:
 
 {{{
-		public function sendRegistrationEmail($user, $password) {
-			if (!isset($user->profile->email)) {
-				throw new CException(Yum::t('Email is not set when trying to send Registration Email'));
-			}
-			$activation_url = $user->getActivationUrl();
+public function sendRegistrationEmail($user, $password) {
+	if (!isset($user->profile->email)) {
+		throw new CException(Yum::t('Email is not set when trying to send Registration Email'));
+	}
+	$activation_url = $user->getActivationUrl();
 
-			if (is_object($content)) {
-					$body = strtr('Hi, {email}, your new password is {password}. Please activate your account by clicking this link: {activation_url}', array(
-								'{email}' => $user->profile->email,
-								'{password}' => $password,
-								'{activation_url}' => $activation_url));
+	if (is_object($content)) {
+		$body = strtr('Hi, {email}, your new password is {password}. Please activate your account by clicking this link: {activation_url}', array(
+			'{email}' => $user->profile->email,
+			'{password}' => $password,
+			'{activation_url}' => $activation_url));
 
-				$mail = array(
-						'from' => Yum::module('registration')->registrationEmail,
-						'to' => $user->profile->email,
-						'subject' => 'Your registration on my example Website',
-						'body' => $body,
-						);
-				$sent = YumMailer::send($mail);
-			}
-
-			return $sent;
-		}
+			$mail = array(
+				'from' => Yum::module('registration')->registrationEmail,
+				'to' => $user->profile->email,
+				'subject' => 'Your registration on my example Website',
+				'body' => $body,
+			);
+		$sent = YumMailer::send($mail);
+	}
+	return $sent;
+}
 }}}
 
 == Making the "about" field required ==
